# qbin

./: 404.html  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  mkdocs.yml
.github/workflows/: ci.yml  docs.yml
architecture/: index.html
cli/: index.html
compiler/: CMakeLists.txt
compiler/include/qbin_compiler/: compiler.hpp  qasm_frontend.hpp  tools.hpp
compiler/src/: compiler.cpp  main.cpp  qasm_frontend.cpp  tools.cpp
decompiler/: CMakeLists.txt
decompiler/include/qbin_decompiler/: decompiler.hpp  tools.hpp
decompiler/src/: decompiler.cpp  main.cpp  tools.cpp
docs/: architecture.md  cli.md  index.md  quickstart.md  troubleshooting.md
install/: index.html
quickstart/: index.html
scripts/: bootstrap.sh
search/: search_index.json
spec/: qbin-example.qbin  qbin-quickref.md  qbin-spec.md
tests/: CMakeLists.txt  roundtrip.py
tests/data/: qbin-example.qasm
troubleshooting/: index.html
usage/: index.html
